# pyproject.toml
[project]
name = "comfy-linear-move" # Unique identifier for your node. Immutable after creation.
description = ""
version = "1.1.1" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/jupo-ai/comfy-linear-move"

[tool.comfy]
PublisherId = "jupo-ai" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "comfy-linear-move" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)